concluídos exercícios de Predicate, Function e BinaryOperator